-modal directive. -adding and updating cqa line working. -utilsService

--- a/frontend/main/app/styles/theme-flatly.scss
+++ b/frontend/main/app/styles/theme-flatly.scss
@@ -5255,7 +5255,7 @@ a.thumbnail.active {
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: #ffffff;
-  border: 1px solid #ecf0f1;
+  border: 1px solid #aabcc0;
 }
 .list-group-item:first-child {
   border-top-right-radius: 4px;
