--- a/frontend/main/app/views/cqa.html
+++ b/frontend/main/app/views/cqa.html
@@ -101,3 +101,6 @@
         <!-- /.navbar-collapse -->
     </div>
 </nav>
+<modal title="CQA Line" modal-id="modal-CQALine" entity="CQALineToBeSaved" service="CQALineService" after-save="afterSaveCQALine(entitySaved)">
+    <cqa-line entity="CQALineToBeSaved"></cqa-line>
+</modal>
