--- a/frontend/main/app/views/cqalist.html
+++ b/frontend/main/app/views/cqalist.html
@@ -20,7 +20,7 @@
                             </button>
                         </div>
                         <div class="col-xs-3 text-center">
-                            <button class="btn btn-default btn-xs" ng-click="openSIF(item);$event.stopPropagation();">
+                            <button class="btn btn-default btn-xs" ng-click="openCQA(item);$event.stopPropagation();">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </button>
                         </div>
