--- a/frontend/main/app/views/cqadetail.html
+++ b/frontend/main/app/views/cqadetail.html
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <p>
-                    <button class="btn btn-default btn-sm" ng-click="openUpdateCQALine(item)">Update</button>
-                    <button class="btn btn-default btn-sm" ng-click="deleteCQALine()">Delete</button>
+                    <button class="btn btn-default btn-sm" ng-click="openItem(item)">Update</button>
+                    <button class="btn btn-default btn-sm" ng-click="removeItem(item)">Delete</button>
                 </p>
             </div>
         </div>
@@ -40,3 +40,6 @@
         </div>
     </li>
 </ul>
+<modal title="CQA Line" modal-id="modal-CQALine" ok-label="Save">
+    <cqa-line></cqa-line>
+</modal>
