--- a/frontend/main/app/views/cqaline.html
+++ b/frontend/main/app/views/cqaline.html
@@ -2,25 +2,25 @@
     <div class="form-group">
         <div class="col-xs-12">
             <label>Due Date</label>
-            <input type="date" class="form-control" ng-model="entity.ConvertedDueDate" />
+            <input type="date" class="form-control" ng-model="baseEntity.ConvertedDueDate" />
         </div>
     </div>
     <div class="form-group">
         <div class="col-xs-12">
             <label>Closed Date</label>
-            <input type="date" class="form-control" ng-model="entity.ConvertedClosedDate" />
+            <input type="date" class="form-control" ng-model="baseEntity.ConvertedClosedDate" />
         </div>
     </div>
     <div class="form-group">
         <div class="col-xs-12">
             <label>Who-s Got Next Step</label>
-            <textarea class="form-control" ng-model="entity.Champion"></textarea>
+            <textarea class="form-control" ng-model="baseEntity.Champion"></textarea>
         </div>
     </div>
     <div class="form-group">
         <div class="col-xs-12">
             <label>Ongoing Activities</label>
-            <textarea class="form-control" ng-model="entity.OngoingActivities"></textarea>
+            <textarea class="form-control" ng-model="baseEntity.OngoingActivities"></textarea>
         </div>
     </div>
     <div class="form-group">
