--- a/frontend/main/app/views/cqalist.html
+++ b/frontend/main/app/views/cqalist.html
@@ -20,7 +20,7 @@
                             </button>
                         </div>
                         <div class="col-xs-3 text-center">
-                            <button class="btn btn-default btn-xs" ng-click="openCQA(item);$event.stopPropagation();">
+                            <button class="btn btn-default btn-xs" ng-click="openItem(item);$event.stopPropagation();">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </button>
                         </div>
@@ -33,7 +33,7 @@
                     <div class="row">
                         <div class="col-sm-3">
                             <label>CQA Number</label>
-                            <p class="form-control-static">{{::item.CQANumber}}</p>
+                            <p class="form-control-static">{{::item.CQANumber.GeneratedNumber}}</p>
                         </div>
                         <div class="col-sm-6">
                             <label>Customer</label>
