--- a/frontend/main/app/views/cqadetail.html
+++ b/frontend/main/app/views/cqadetail.html
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <p>
-                    <button class="btn btn-default btn-sm" ng-click="openItem(item)">Update</button>
-                    <button class="btn btn-default btn-sm" ng-click="removeItem(item)">Delete</button>
+                    <button class="btn btn-primary btn-xs" ng-click="openItem(item)">Update</button>
+                    <button class="btn btn-primary btn-xs" ng-click="removeItem(item)">Delete</button>
                 </p>
             </div>
         </div>
@@ -26,7 +26,6 @@
                 <p class="form-control-static">{{item.Champion}}</p>
             </div>
             <div class="col-xs-12 col-sm-4">
-                <label>Attachments</label>
                 <p class="form-control-static">
                     <attachments-box owner-entity="assembly" kind="BOMAttachments" after-upload="saveAfterUpload(oEntity, oDeferred)" read-only="true" when-change="on_attachments_change(oEntity)" after-delete="afterRemoveFile(oEntity)"></attachments-box>
                 </p>
