--- a/frontend/main/app/views/cqalist.html
+++ b/frontend/main/app/views/cqalist.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-3">
-                            <label>{{item.itemNumber}}</label>
+                            <label>{{item.itemIndex}}</label>
                         </div>
                         <div class="col-xs-3 text-center">
                             <button class="btn btn-default btn-xs" ng-click="removeItem(item);$event.stopPropagation();">
