-Remove Theme selector. -Using theme-yeti

--- a/frontend/main/app/styles/main.scss
+++ b/frontend/main/app/styles/main.scss
@@ -2,6 +2,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // bower:scss
 // endbower
 
+@import "theme-yeti";
 @import "alertify";
 @import "alertify-theme";
 @import "reusable-styles";
