--- a/frontend/main/app/views/cqadetail.html
+++ b/frontend/main/app/views/cqadetail.html
@@ -39,6 +39,6 @@
         </div>
     </li>
 </ul>
-<modal title="CQA Line" modal-id="modal-CQALine" ok-label="Save">
+<modal title="CQA Line" modal-id="modal-CQALine" ok-label="Save" max-width="500px">
     <cqa-line></cqa-line>
 </modal>
