-CQALine Attachments working.

--- a/frontend/main/app/styles/attachments-flatly.sass
+++ b/frontend/main/app/styles/attachments-flatly.sass
@@ -1,2 +1,28 @@
 .AttachmentsBox
-	background-color: #ecf0f1 !important
+	background-color: #fafafa
+	padding: 4px
+	border: solid 2px gray
+	border-style: dotted
+	p
+		border-bottom: solid 1px #E5E5E5
+		width: 100%
+		font-size: .9em
+		padding: 2px 0
+		margin: 0
+		a
+			display: block
+			position: relative
+			top: 0
+		.glyphicon-upload
+			padding: 3px 0
+			font-size: 1.2em
+		button
+			display: block
+			top: 4px
+			position: relative
+			padding: 0
+		.glyphicon-remove
+			padding: 0
+	.btn-success
+		margin-top: 4px
+		margin-bottom: 0
