--- a/frontend/main/app/views/cqadetail.html
+++ b/frontend/main/app/views/cqadetail.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-xs-12 col-sm-4">
                 <p class="form-control-static">
-                    <attachments-box owner-entity="assembly" kind="BOMAttachments" after-upload="saveAfterUpload(oEntity, oDeferred)" read-only="true" when-change="on_attachments_change(oEntity)" after-delete="afterRemoveFile(oEntity)"></attachments-box>
+                    <attachments-box owner-entity="item" kind="CQALineAttachments" read-only="true"></attachments-box>
                 </p>
             </div>
         </div>
