-CQA List layout done.

--- a/frontend/main/app/styles/main.scss
+++ b/frontend/main/app/styles/main.scss
@@ -7,7 +7,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "alertify-theme";
 @import "reusable-styles";
 @import "attachments-flatly";
-
+@import "cqaList";
 
 .browsehappy {
   margin: 0.2em 0;
