--- a/frontend/main/app/views/cqalist.html
+++ b/frontend/main/app/views/cqalist.html
@@ -1,10 +1,10 @@
 <h3 class="text-center">{{::screenTitle}}</h3>
 <list-view config="config">
     <dir-pagination-controls on-page-change="pageChanged(newPageNumber)"></dir-pagination-controls>
-    <div hide-when-loading="isLoading" class="panel panel-default" dir-paginate="item in baseList | itemsPerPage: filterOptions.perPage track by item.id" total-items="filterOptions.itemsCount" current-page="filterOptions.page">
+    <div hide-when-loading="isLoading" class="CQAListItem panel panel-default" dir-paginate="item in baseList | itemsPerPage: filterOptions.perPage track by item.id" total-items="filterOptions.itemsCount" current-page="filterOptions.page">
         <div class="panel-heading" style="font-size:.8em;">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <div class="row">
                         <div class="col-sm-12">
                             <progress-tracker entity="item.progressTrackerEntity"></progress-tracker>
@@ -12,7 +12,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-3">
-                            <label>{{item.itemIndex}}</label>
+                            <span>{{item.itemIndex}}</span>
                         </div>
                         <div class="col-xs-3 text-center">
                             <button class="btn btn-default btn-xs" ng-click="removeItem(item);$event.stopPropagation();">
@@ -24,52 +24,48 @@
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </button>
                         </div>
-                        <div class="col-xs-3 text-center">
-                            <input type="checkbox" class="form-control Unbordered" ng-model="item.checked" style="margin: 0; width: 20px; margin-left: auto; margin-right: auto;height:1.8em;" ng-click="checkItem(item.checked);$event.stopPropagation();" />
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <br>
+                            <div class="panel panel-default">
+                                <h5 class="text-center"><span class="label label-default"  style="width:90%;display: inline-block;">CQA Number</span></h5>
+                                <p class="text-center">{{::item.CQANumber.GeneratedNumber}}</p>
+                                <h5 class="text-center"><span class="label label-default"  style="width:90%;display: inline-block;">Customer Number</span></h5>
+                                <p class="text-center">{{::item.CQANumber.GeneratedNumber}}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-10">
+                <div class="col-sm-9">
                     <div class="row">
-                        <div class="col-sm-3">
-                            <label>CQA Number</label>
-                            <p class="form-control-static">{{::item.CQANumber.GeneratedNumber}}</p>
-                        </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-8">
                             <label>Customer</label>
                             <p class="form-control-static">{{::item.Customer.CustomerName}}</p>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-sm-4">
                             <label>Notification Date</label>
                             <p class="form-control-static">{{::item.NotificationDate | date:'medium'}}</p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-3">
-                            <label>Part Number</label>
-                            <p class="form-control-static">{{::item.cat_PartNumber}}</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <label>Part Description</label>
-                            <p class="form-control-static">{{::item.cat_PartNumber}}</p>
+                        <div class="col-sm-5">
+                            <label>Part</label>
+                            <p class="form-control-static">{{::item.cat_PartNumber}} {{::item.cat_PartNumber}}</p>
                         </div>
                         <div class="col-sm-3">
                             <label>Product Line</label>
                             <p class="form-control-static">{{::item.cat_ProductLine}}</p>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="col-sm-4">
                             <label>Reoccurring Issue</label>
                             <p class="form-control-static">{{::item.ReoccurringIssue}}</p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-2">
-                            <label>Concern Type</label>
-                            <p class="form-control-static">{{::item.cat_ConcernType}}</p>
-                        </div>
                         <div class="col-sm-4">
-                            <label>Concern Description</label>
-                            <p class="form-control-static">{{::item.cat_ConcernType}}</p>
+                            <label>Concern</label>
+                            <p class="form-control-static">{{::item.cat_ConcernType}} {{::item.cat_ConcernType}}</p>
                         </div>
                         <div class="col-sm-2">
                             <label>Result</label>
@@ -79,7 +75,7 @@
                             <label>Status</label>
                             <p class="form-control-static">{{::item.cat_Status}}</p>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="col-sm-4">
                             <label>Number of concerned parts</label>
                             <p class="form-control-static">{{::item.NumberConcernedParts}}</p>
                         </div>
