--- a/frontend/main/app/styles/main.scss
+++ b/frontend/main/app/styles/main.scss
@@ -87,7 +87,7 @@ body {
   }
   /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    margin-bottom: 0;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
