--- a/frontend/main/app/views/cqalist.html
+++ b/frontend/main/app/views/cqalist.html
@@ -32,7 +32,7 @@
                                 <h5 class="text-center"><span class="label label-default"  style="width:90%;display: inline-block;">CQA Number</span></h5>
                                 <p class="text-center">{{::item.CQANumber.GeneratedNumber}}</p>
                                 <h5 class="text-center"><span class="label label-default"  style="width:90%;display: inline-block;">Customer Number</span></h5>
-                                <p class="text-center">{{::item.CQANumber.GeneratedNumber}}</p>
+                                <p class="text-center">{{::item.CustomerNumber}}</p>
                             </div>
                         </div>
                     </div>
